# rustpilot

./: Cargo.toml
src/: config.rs  main.rs
src/tools/: file_read.rs  file_search.rs  file_system.rs  mod.rs  rss.rs  safe_command.rs  system_info.rs  weather.rs  zstd_tool.rs
