[package]
name = "rustpilot"
version = "0.1.0"
edition = "2021"

[dependencies]
llm-chain = { path = "llm-chain/crates/llm-chain" }
llm-chain-openai = { path = "llm-chain/crates/llm-chain-openai" }
async-trait = "0.1.68"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rss = "2.0"
chrono = "0.4"
dirs = "5.0"
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
sysinfo = "0.37.2"
memmap2 = "0.9.9"
zstd = "0.13.3"
tar = "0.4.44"
walkdir = "2.5.0"
zip = "7.0.0"
glob = "0.3.3"
owo-colors = "4.2.3"
tabled = "0.20.0"
